# auto-trans-markdown

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  BUILDING.md  CLAUDE.md  Dockerfile  Makefile  NOTEBOOK.md  README.md  docker-compose.yml  glossary.yaml  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v3.0-REQUIREMENTS.md  v3.1-REQUIREMENTS.md
.planning/research/: FEATURES.md  (+4 more)
docs/: INSTALL.txt  RELEASE-NOTES-3.1.md  RELEASE-NOTES-3.2.md  RELEASE-NOTES-3.3.md  appcast.xml  icon-philosophy.md  performance.md
scripts/: build-app.sh  build-python-bundle.sh  md-translate  measure-cold-start.sh
src/: __init__.py  batch_zip.py  cli.py  deployment.py  estimate.py  gitignore_filter.py  glossary.py  html_export.py  jobs.py  main.py  memory.py  parser.py  pdf_export.py  pipeline.py  review.py  target_langs.py  translator.py  validator.py
static/: index.html
tests/: conftest.py  test_api.py  test_batch_zip.py  test_cli.py  test_deployment.py  test_estimate.py  test_gitignore_filter.py  test_glossary.py  test_html_export.py  test_integration.py  test_jobs.py  test_memory.py  test_parser.py  test_pdf_export.py  test_pipeline.py  test_review.py  test_target_langs.py  test_translator.py  test_validator.py
(+186 files in other folders)
