[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-trans-markdown"
version = "1.0.0"
description = "Traductor de Markdown preservando formato y código"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "openai>=1.55.0",
    "python-dotenv>=1.0.1",
    "deepl>=1.20.0",
    "typer>=0.21.0",
    "pyyaml>=6.0.2",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "typer>=0.21.0"]

[project.scripts]
md-translate = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["src.*.egg-info"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
